@@ -1,4 +1,5 @@
 0.7.0 (currently working on)
+- [#1940] Feature: Allow using the referrer in the registration CSV export and the e-mail to the organizers
 - [#1939] Feature: Add a one-line text input field "referer" to the registration records
 - [#1931] Feature: Add SQL and TCA for the new prices
 - [#1914] Change: Build all redirection links and links in e-mails using cObj->typoLink_URL
